k8s/network/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodgram-ingress
  namespace: foodgram
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/enable-metrics: "true"
    prometheus.io/scrape: "true"
    prometheus.io/port: "10254"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000
      
      - path: /backend_static
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      
      - path: /media
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
